--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
 <body>
+    {% extends "base.html" %}
+
+{% block title %}Home{% endblock %}
+
+{% block content %}
+<h1>Welcome to the Real Estate Dashboard</h1>
+<p>This is the home page.</p>
+{% endblock %}
     {% if loggedin %}
     <h1>Welcome, {{ session['email'] }}!</h1>
     <a href="{{ url_for('profile') }}">Profile</a>
